figuring out dynamic objs and async storage apis

--- a/options.html
+++ b/options.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <link rel="stylesheet" type="text/css" href="style.css">
-      <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   </head>
 
   <body>
@@ -45,11 +45,13 @@
           <input id="resume" type="file" class="resume">
         </div>
 
+        <button onclick="saveInputs()">Save Fields</button>
+
       </form><!-- form-inline -->
     </div><!-- buttonDiv -->
 
   </body>
 
   <script src="options.js"></script>
-
+  <script src="functions.js"></script>
 </html>
