saving fields finally working

--- a/options.html
+++ b/options.html
@@ -40,12 +40,12 @@
           <input id="website_url" type="url" class="website-url">
         </div>
 
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label for="resume">Resume</label>
           <input id="resume" type="file" class="resume">
-        </div>
+        </div> -->
 
-        <button onclick="saveInputs()">Save Fields</button>
+        <button input id="clickMe" type="button">Save Fields</button>
 
       </form><!-- form-inline -->
     </div><!-- buttonDiv -->
